# ai-prompt-optimizer

./: .gitignore
.cursor/rules/: backend.mdc  frontend.mdc  plan.mdc
backend/: .gitignore  API_KEY_配置说明.md  README.md  env.example  pyproject.toml  requirements.txt  test_enhanced_optimization.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: auth.py  health.py  optimizer.py  users.py
backend/app/core/: __init__.py  ai_client.py  dependencies.py  prompt_analyzer.py  prompt_optimizer.py  quality_evaluator.py  security.py
backend/app/models/: __init__.py  base.py  optimization.py  user.py
backend/app/schemas/: __init__.py  auth.py  common.py  optimization.py
backend/app/services/: __init__.py  auth_service.py  user_service.py
backend/app/utils/: exceptions.py
backend/docs/development-logs/: Sprint2-Week3-Day3-5-核心优化算法开发-开发日志.md
backend/migrations/: env.py
backend/migrations/versions/: 96970d6591dc_add_optimization_tables.py
backend/scripts/: create_known_user.py  create_test_user.py  init_superuser.py
backend/tests/: test_main.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
功能文档/: Sprint1-Day1-2-项目初始化和后端基础.md  Sprint1-Day3-5-后端核心框架.md  Sprint1-Week2-Day1-3-前端项目搭建.md  Sprint1-Week2-Day4-5-基本功能集成-功能文档.md  Sprint2-Week3-Day1-2-AI服务集成-功能文档.md  Sprint2-Week4-Day1-3-前端优化界面开发-功能文档.md  Sprint2-Week4-Day4-5-交互优化和联调-功能文档.md
项目文档/: AI提示词优化器项目文档.md  前端项目设计文档.md  后端项目设计文档.md  开发计划文档.md
(+31 files in other folders)
